Load pagination information values from action configuration